update db to mongodb and fix cors origin fix