@@ -6,7 +6,6 @@ import org.springframework.web.cors.CorsConfiguration;
 import org.springframework.web.cors.reactive.CorsWebFilter;
 import org.springframework.web.cors.reactive.UrlBasedCorsConfigurationSource;
 
-import java.util.Arrays;
 import java.util.List;
 
 @Configuration
@@ -15,41 +14,23 @@ public class CorsConfig {
     @Bean
     public CorsWebFilter corsWebFilter() {
         CorsConfiguration corsConfig = new CorsConfiguration();
-        
-        // Allow specific origins (localhost for development, Azure for production)
-        corsConfig.setAllowedOrigins(Arrays.asList(
-            "http://localhost:3000",
-            "http://localhost:3001",
-            "http://127.0.0.1:3000",
-            "http://127.0.0.1:3001",
-            "https://ctse-frontend.azurewebsites.net"
-        ));
-        
-        // Allow specific HTTP methods
-        corsConfig.setAllowedMethods(Arrays.asList(
-            "GET", "POST", "PUT", "PATCH", "DELETE", "OPTIONS"
-        ));
-        
-        // Allow specific headers
-        corsConfig.setAllowedHeaders(Arrays.asList(
-            "Authorization",
-            "Content-Type",
-            "Accept",
-            "X-Requested-With",
-            "X-User-Id",
-            "X-Username",
-            "X-User-Roles"
-        ));
+
+        // Gateway is the single CORS authority. Keep this cloud-agnostic.
+        corsConfig.setAllowedOriginPatterns(List.of("*"));
+
+        corsConfig.setAllowedMethods(List.of("GET", "POST", "PUT", "PATCH", "DELETE", "OPTIONS"));
+
+        corsConfig.setAllowedHeaders(List.of("*"));
         
         // Expose headers to client
-        corsConfig.setExposedHeaders(Arrays.asList(
+        corsConfig.setExposedHeaders(List.of(
             "Authorization",
             "X-User-Id",
             "X-Username"
         ));
-        
-        // Allow credentials
-        corsConfig.setAllowCredentials(true);
+
+        // Token-based auth uses Authorization header, not cookies.
+        corsConfig.setAllowCredentials(false);
         
         // Cache preflight response for 1 hour
         corsConfig.setMaxAge(3600L);
